actualizacion de proyecto

--- a/src/app/components/prestador/prestador.component.html
+++ b/src/app/components/prestador/prestador.component.html
@@ -9,7 +9,10 @@
         <span>FICHA DE PRESTADOR</span>        
     </h1>
  
-    <button class="button-right blue-fab" mat-fab aria-label="Example icon button with a delete icon" matTooltip="ver pacientes" (click)="afiliados(element)">
+    <button class="button-right bluelight-fab" mat-fab aria-label="Example icon button with a delete icon" matTooltip="ver ordenes" (click)="afiliados(element)">
+        <mat-icon>people</mat-icon>
+    </button>    
+    <button class="button-right blue-fab" mat-fab aria-label="Example icon button with a delete icon" matTooltip="ver recetas" (click)="afiliados(element)">
         <mat-icon>people</mat-icon>
     </button>
     <button class="button-right pourpe-fab" mat-fab aria-label="Example icon button with a delete icon" matTooltip="ver obras sociales" (click)="obrassociales()">
