--- a/src/app/components/afiliados/afiliados.component.css
+++ b/src/app/components/afiliados/afiliados.component.css
@@ -66,3 +66,10 @@
     margin-right: auto;
     left: 0; /* Mueve el botón al margen derecho */
 }
+
+.botonera {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1rem;
+}
