--- a/src/app/components/afiliados/afiliados.component.html
+++ b/src/app/components/afiliados/afiliados.component.html
@@ -1,22 +1,24 @@
 <app-nav></app-nav>
-<button class="button-left red-fab" mat-fab aria-label="Example icon button with a delete icon"
-    matTooltip="salir" (click)="salir()">
-    <mat-icon>west</mat-icon>
-</button>
-<button class="button-right green-fab" mat-fab aria-label="Download" matTooltip="descargar" >
-    <mat-icon>
-        <span class="material-symbols-outlined">
-            download
-        </span>
-    </mat-icon>
-</button>
+<div class="botonera">
+    <button class="button-left red-fab" mat-fab aria-label="Example icon button with a delete icon"
+        matTooltip="salir" (click)="salir()">
+        <mat-icon>west</mat-icon>
+    </button>
+    <button class="button-right green-fab" mat-fab aria-label="Download" matTooltip="descargar" (click)="descargarCSV()">
+        <mat-icon>
+            <span class="material-symbols-outlined">
+                download
+            </span>
+        </mat-icon>
+    </button>
+</div>
 <div class="scroll-y row">
 
     <div class="row-cards col-9">
         <!-- Primera card (70%) -->
         <div class="card" style="flex: 0 0 70%; background-color: rgb(40, 151, 216); color: aliceblue;">
             <div class="card-body">
-                <h1 class="card-title">NOMBRE</h1>
+                <h1 class="card-title">NOMBRE MEDICO</h1>
                 <p class="card-text">{{prestador.Nombre}}</p>
             </div>
         </div>
@@ -24,14 +26,14 @@
     <!-- Segunda card (30%) -->
     <div class="card col-3" style="background-color: rgb(40, 216, 49); color: aliceblue;">
         <div class="card-body">
-            <h1 class="card-title">NOMBRE</h1>
-            <p class="card-text">{{prestador.Nombre}}</p>
+            <h1 class="card-title">MASTRICULA</h1>
+            <p class="card-text">{{prestador.NroPrestador}}</p>
         </div>
     </div>
     <!-- card-columns puede quedar si luego las activás -->
 
     <h1 class="mt-1 mb-5 pb-1 text-center title">
-        <span>LISTA DE AFILIADOS ATENDIDO</span>        
+        <strong><span>LISTA DE AFILIADOS ATENDIDO</span></strong>        
     </h1>
     <div class="mat-elevation-z8 mat-table-responsive scroll-y">
         <table mat-table [dataSource]="dataSource" id="names">
@@ -60,6 +62,12 @@
                 <td mat-cell *matCellDef="let element" class=" text-center"> {{element.NombreAfiliado}} </td>
             </ng-container>
 
+            <!-- Plan Column -->
+            <ng-container matColumnDef="NombrePlan">
+                <th mat-header-cell *matHeaderCellDef class=" text-center"> Plan </th>
+                <td mat-cell *matCellDef="let element" class=" text-center"> {{element.NombrePlan !== null ? element.NombrePlan : 'NO REGISTRADO'}} </td>
+            </ng-container>
+
             <!-- Fecha Column -->
             <ng-container matColumnDef="FechaEmision">
                 <th mat-header-cell *matHeaderCellDef class=" text-center"> Fecha Emision </th>
@@ -74,5 +82,4 @@
             aria-label="Select page of periodic elements">
         </mat-paginator>
     </div>
-
 </div>
