--- a/src/app/layout/publico/login/login.component.html
+++ b/src/app/layout/publico/login/login.component.html
@@ -1,6 +1,6 @@
 
 <section class="h-100 gradient-form" style="background-color: #eee;">
-  <div class="container py-5 h-100">
+  <div class="container py-5 h-100 scroll-y">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col-xl-10">
         <div class="card rounded-3 text-black">
